--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ back_end/enum/__pycache__
 back_end/Models/__pycache__
 back_end/dependencies/__pycache__
 back_end/dependencies/users/user_info/__pycache__
+unused.txt
+back_end/database/mysql/__pycache__
