--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ back_end/dependencies/__pycache__
 back_end/dependencies/users/user_info/__pycache__
 unused.txt
 back_end/database/mysql/__pycache__
+back_end/dependencies/users/addressbook/__pycache__
